force-app/main/default/objects/SBQQ__Quote__c/fields/Danny_Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Danny_Approval_Comments__c</fullName>
    <label>Approval Comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>