force-app/main/default/objects/SBQQ__Quote__c/fields/DMA_Renewal__c.field-meta.xml
<CustomField>
    <fullName>DMA_Renewal__c</fullName>
    <formula>SBQQ__Opportunity2__r.SBQQ__Renewal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal</label>
    <type>Checkbox</type>
</CustomField>