force-app/main/default/objects/SBQQ__Quote__c/fields/DMA_Shipping_Account__c.field-meta.xml
<CustomField>
    <fullName>DMA_Shipping_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (Account)</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>