force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_Approver_1__c.field-meta.xml
<CustomField>
    <fullName>Quote_Approver_1__c</fullName>
    <formula>IF(
  SBQQ__SalesRep__r.Manager.Id != null,
  SBQQ__SalesRep__r.Manager.Id,
  SBQQ__SalesRep__r.Id
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Approver 1</label>
    <type>Text</type>
</CustomField>