force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_Approver_2__c.field-meta.xml
<CustomField>
    <fullName>Quote_Approver_2__c</fullName>
    <formula>IF(
  SBQQ__SalesRep__r.Manager.Manager.Id != null,
  SBQQ__SalesRep__r.Manager.Manager.Id,
  IF(
    SBQQ__SalesRep__r.Manager.Id != null,
    SBQQ__SalesRep__r.Manager.Id,
    SBQQ__SalesRep__r.Id
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Approver 2</label>
    <type>Text</type>
</CustomField>