force-app/main/default/objects/SBQQ__Quote__c/listViews/SBQQ__All.listView-meta.xml
<ListView>
    <fullName>SBQQ__All</fullName>
    <columns>NAME</columns>
    <columns>SBQQ__Opportunity2__c</columns>
    <columns>SBQQ__Type__c</columns>
    <columns>SBQQ__Primary__c</columns>
    <columns>SBQQ__LineItemsGrouped__c</columns>
    <columns>SBQQ__NetAmount__c</columns>
    <columns>SBQQ__Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>SBQQ__Ordered__c</columns>
    <columns>SBQQ__OrderByQuoteLineGroup__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>